k8s-deployment/pathfinder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathfinder
  namespace: "2401019"
  labels:
    app: pathfinder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pathfinder
  template:
    metadata:
      labels:
        app: pathfinder
    spec:
      imagePullSecrets:
      - name: nexus-secret
      containers:
      - name: pathfinder
        image: 127.0.0.1:30085/my-repository/pathfinder:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
