k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pathfinder-service
  namespace: "2401019"
spec:
  selector:
    app: pathfinder
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
